# superrarebot

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
superrarebot/: config.py  discord.py
superrarebot/datasources/: superrare.py
